# sablenda

./: .gitignore  README.md  install.py  main.py  pyproject.toml  run.bat  setup.iss
agenda/: __init__.py  __main__.py  main.py
agenda/data/: __init__.py  calendar.py  models.py
agenda/storage/: __init__.py  pickle_storage.py
agenda/ui/: __init__.py  calendar_grid.py  entry_dialog.py  main_window.py
locales/en/: main.ftl
locales/fr/: main.ftl
sablenda/: __init__.py  __main__.py  i18n.py  ipc.py  settings.py  windows_api.py
sablenda/data/: __init__.py  calendar.py  models.py
sablenda/domain/: __init__.py  repository.py
sablenda/infrastructure/: __init__.py  database.py  mapping.py  schema.py  sqlalchemy_repository.py
sablenda/storage/: pickle_storage.py
sablenda/ui/: calendar_grid.py  entry_dialog.py  main_window.py  preferences_dialog.py  tray_icon.py
tests/: __init__.py  conftest.py  test_database.py  test_repository.py
