[project]
name = "sablenda"
version = "0.1.0"
description = "An accessible agenda"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fluent-runtime>=0.4.0",
    "sqlalchemy>=2.0.44",
    "wxpython>=4.2.4",
]

[dependency-groups]
dev = [
    "nuitka>=2.8.4",
    "pytest>=9.0.0",
]
